# uniparser-grammar-udm

./: .gitignore  LICENSE  MANIFEST.in  README.md  bad_analyses.txt  paradigms.txt  pre_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sort_lexemes.py  udm_lexemes_ADJ.txt  udm_lexemes_IMIT.txt  udm_lexemes_N.txt  udm_lexemes_NRel.txt  udm_lexemes_NUM.txt  udm_lexemes_N_persn.txt  udm_lexemes_N_unsure.txt  udm_lexemes_PRO.txt  udm_lexemes_V.txt  udm_lexemes_unchangeable.txt  udm_lexrules_N.txt  udm_lexrules_V.txt  udmurt_disambiguation.cg3  word_sorted.py
analyzer/: dumb_udmurt_parser.py  lex_rules.txt  paradigms.txt
analyzer/ParadigmsCompiled/: Empty.csv  Noun-case-ija.csv  Noun-case-pal.csv  Noun-case-poss-1,sg-soft.csv  Noun-case-poss-1,sg.csv  Noun-case-poss-2,pl-j.csv  Noun-case-poss-2,pl-soft.csv  Noun-case-poss-2,sg.csv  Noun-case-poss-3,pl-j.csv  Noun-case-poss-3,sg-j.csv  Noun-case-poss-3,sg-soft.csv  Noun-case-poss-3,sg.csv  Noun-case.csv  Noun-num-consonant=1.csv  Noun-num-ije=1.csv  Noun-num-j.csv  Noun-num-j=0.csv  Noun-num-pal=0.csv  Noun-num-soft.csv  Noun-num-soft=0.csv  Noun-num-vowel.csv  Noun-num-vowel=1.csv  Noun-num-vowel=2.csv  stems.csv
analyzer/UniParser/: analyze.py  grammar.py  morph_fst.py  morph_parser.py  paradigm.py  wordform.py
analyzer_obsolete/ParadigmsCompiled/: Noun-case-ije.csv  Noun-case-poss-1,pl-j.csv  Noun-case-poss-1,pl.csv  Noun-case-poss-2,pl.csv  Noun-case-poss-2,sg-j.csv  Noun-num-ije.csv  (+3 more)
finalizer/: gramm_finalizer.py
uniparser_udmurt/: __init__.py
wordlists/: unparsed.txt  wordlist_unanalyzed.txt
(+31 files in other folders)
