[metadata]
name = uniparser-udmurt
version = 2.1.9
author = Timofey Arkhangelskiy
author_email = timarkh@gmail.com
description = Rule-based morphological analysis for Udmurt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timarkh/uniparser-grammar-udm
project_urls =
    Bug Tracker = https://github.com/timarkh/uniparser-grammar-udm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.7
install_requires =
	uniparser-morph>=2.2.0
	importlib-resources
include_package_data = True
